2004-10-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/port.h: made reset_regparms prototype void parameter explicit.
	* src/SDCCsymt.c (processFuncArgs): removed argument "func".
	* src/mcs51/ralloc.c (packRegisters): new fix for bugs 898889 & 979599.
	* doc/sdccman.lyx: documented warning disabling and how to use
	  printf_large to make it print floats.
	* device/include/stdbool.h: NEW
	* device/lib/_atof.c,
	* device/lib/_divuint.c,
	* device/lib/_divulong.c,
	* device/lib/expf.c,
	* device/lib/printf_large.c,
	* device/lib/sincosf.c,
	* device/lib/sincoshf.c: used stdbool.h, all compile with stack-auto now
	* device/lib/Makefile.in: added target for model-mcs51-reentrant to build
	  a completely reentrant lib.

2004-10-05 Vangelis Rokas <vrokas AT otenet.gr>

	* device/lib/pic16/libsdcc/gptr/gptr*.c: added return statements
	* device/include/pic16/stdio.h: fixed bug with colon

2004-10-03 Vangelis Rokas <vrokas AT otenet.gr>

	* device/include/pic16/stdio.h,
	* device/include/pic16/stdlib.h,
	* device/include/pic16/math.h: NEW
	* device/lib/pic16/libsdcc/gptr/*.c (gptrget*, gptrput*): functions
	declared as _naked to reduce overhead
	* device/lib/Makefile.in (target port-specific-objects-pic16):
	changed * to *.* so to ignore the CVS directory,
	* src/pic16/gen.c (pic16_freeAsmop): added code to store result of
	stacked variables back in stack,
	* (genEndFunction): fixed bug reported by G.M. Gallant with stack
	corruption

2004-10-01 Vangelis Rokas <vrokas AT otenet.gr>

	* .version: bumped version number to 2.4.5
	* support/Util/SDCCerr.h: added warning W_POSSBUG2.
	* support/Util/SDCCerr.c (messages structure): added entry for
	W_POSSBUG2

	Large cumulative patch for pic16 port and libraries.
	* device/include/pic16/sdcc-lib.h,
	* device/include/pic16/stdarg.h,
	* device/include/asm/pic16/features.h,
	* device/include/lib/pic16/libsdcc/gptr/{*.c, Makefile}: NEW,
	* device/include/pic16/float.h: changes reentrant keyword with